--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -7,8 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
         - name: Get Code
-          run: |
-            echo "clone repo"
-            git clone https://github.com/${{github.repository}}.git myfiles
-            cd myfiles && ls 
+          uses: actions/checkout@v4
+          # run: |
+          #   echo "clone repo"
+          #   git clone https://github.com/${{github.repository}}.git myfiles
+          #   cd myfiles && ls 
     
