--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -8,8 +8,16 @@ jobs:
     steps: 
         - name: Get Code
           uses: actions/checkout@v4
-          # run: |
-          #   echo "clone repo"
-          #   git clone https://github.com/${{github.repository}}.git myfiles
-          #   cd myfiles && ls 
+        - name: setup node js
+          uses: actions/setup-node@v4
+          with:
+            node-version: 22
+        -name: print node version
+         run: node -v
+        -name: Install dependancies
+         run: npm install
+        -name: Run test
+         run: npm run test
+             
+
     
